--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
+    "d3-svg-legend": "^2.25.6",
+    "humanize-plus": "^1.8.2",
     "normalize.css": "^8.0.1",
     "regenerator-runtime": "^0.13.5",
     "remove-files-webpack-plugin": "^1.4.0"
